# LemonChat

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build_for_windows.yml
include/: chatbox.h  chatenv.h  p2pnode.h
src/: chatbox.cpp  chatbox.ui  chatenv.cpp  p2pnode.cpp
